# Barking-Polka

./: Makefile  create_wav.py  docker-compose.yaml  play_wav.py  pyproject.toml  speech_recognition.py
backend/app/: main.py
backend/pkgs/: AzureTextClient.py  FakeSpeechStreamClient.py  speach_to_text.py
backend_tests/app/: test_chat_events.py
backend_tests/pkgs/: test_speach_to_text.py
db/: env.py
frontend/: package-lock.json  package.json  test.setup.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  AppContext.ts  main.tsx
frontend/src/__tests__/: groupChat.test.tsx  testServer.ts
frontend/src/components/Chat/: Chat.tsx  MessageEvent.ts
