[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "azure-cognitiveservices-speech>=1.43.0",
    "fastapi==0.115.12",
    "playsound>=1.3.0",
    "psycopg2>=2.9.10",
    "pyobjc>=11.0",
    "scipy>=1.15.3",
    "sounddevice>=0.5.1",
    "uvicorn==0.34.2",
]

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "faker>=37.1.0",
    "httpx>=0.28.1",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "ruff==0.11.9",
]
